force-app/main/default/objects/Rubro__c/Rubro__c.object-meta.xml
<CustomObject>
    <label>Rubro</label>
    <nameField>
        <label>Nombre de Rubro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rubros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>