force-app/main/default/objects/Rubro__c/fields/PAPCE__c.field-meta.xml
<CustomField>
    <fullName>PAPCE__c</fullName>
    <label>PAPCE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>