force-app/main/default/objects/Rubro__c/fields/PAPCT__c.field-meta.xml
<CustomField>
    <fullName>PAPCT__c</fullName>
    <label>PAPCT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>