force-app/main/default/objects/Rubro__c/fields/Porc_Apor_SSoc_Empleador_IVM__c.field-meta.xml
<CustomField>
    <fullName>Porc_Apor_SSoc_Empleador_IVM__c</fullName>
    <label>Porc_Apor_SSoc_Empleador_IVM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>