force-app/main/default/objects/Rubro__c/fields/Porc_Apor_SSoc_Empleador_Mater__c.field-meta.xml
<CustomField>
    <fullName>Porc_Apor_SSoc_Empleador_Mater__c</fullName>
    <label>Porc_Apor_SSoc_Empleador_Mater</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>