force-app/main/default/objects/Rubro__c/fields/Porcentaje_de_aportaciones_Reserva_Labor__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_aportaciones_Reserva_Labor__c</fullName>
    <label>Porcentaje de aportaciones Reserva Labor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>