force-app/main/default/objects/Rubro__c/fields/Salario_Base_Reserva_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Reserva_Laboral__c</fullName>
    <label>Salario Base Reserva Laboral.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>