force-app/main/default/objects/Rubro__c/fields/Salario_Base_Seguro_Social__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Seguro_Social__c</fullName>
    <label>Salario Base Seguro Social IVM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>