force-app/main/default/objects/Rubro__c/fields/Salario_Base_Seguro_Social_Mater__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Seguro_Social_Mater__c</fullName>
    <label>Salario Base Seguro Social Mater</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>